--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-color: rgba(245,245,245,.8) !important;
+    line-height: 1.5;
+    margin:0;
+    padding:0;
+}
